# computational_physics

ava2/: Cargo.toml  main.py
ava2/src/: main.rs
ava3/q1/: Cargo.toml
ava3/q1/src/: main.rs
ava3/q2/: Cargo.toml
ava3/q2/src/: main.rs
ava3/q3/: Cargo.toml
ava3/q3/src/: main.rs
ava3/q4/: Cargo.toml
ava3/q4/src/: main.rs
ava3/q5/: Cargo.toml
ava3/q5/src/: main.rs  main.rs.bkp
ava4/q1/: ex4-2.py  ex4-3.py
ava4/q2/src/: main.rs
ava4/q3/: Cargo.toml  a.py
ava4/q3/src/: main.rs
ava4/q4/src/: main.rs
ava4/q5/: Cargo.toml  cheb.py
ava4/q5/src/: main.rs
ava5/q1/src/: main.rs
ava6/apre2/: Cargo.toml  gaussxw.py  main.py
ava6/apre2/src/: main.rs  main.rs.bkp
ava6/q1/src/: main.rs
ava6/q2/: main.py
ava6/q2/src/: main.rs
ava6/q3/: Cargo.toml
ava6/q3/src/: main.rs
ava6/q4/: main.py
ava6/q4/src/: main.rs
ava8/q1/: Cargo.toml  main.py
ava8/q1/src/: main.rs
ava9/q2/: Cargo.toml  crystal  md1  particles.mod  potential.mod  simulation_control.mod  statistics.mod
ava9/q2/a/: 1  2  3  4  5  6  7  f.txt  i1  i2  i3  i4  i5  i6  i7  o1  o2  o3  o4  o5  o6  o7
ava9/q2/b/: f.txt  i002  i005  i01  i05  o002  o005  o01  o05
ava9/q2/c/: 4  f.txt  i07  i08  i095  i1  i105  i11  o07  o08  o095  o1  o105  o11
ava9/q2/src/: main.rs
tema/: mult.py
tema/parallel/src/: main.rs
tema/rust_ver/: Cargo.toml
tema/rust_ver/benches/: matrix_benchmark.rs
tema/rust_ver/src/: matrix.rs
