cargo-features = ["profile-rustflags"]

[package]
name = "q1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.2"
plotters = "0.3.5"
nalgebra-lapack = "0.24.0"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
incremental = false
rustflags = ["-C", "target-cpu=native", "-Z", "tune-cpu=native"]