cargo-features = ["profile-rustflags"]

[package]
name = "rust_ver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rayon = "1.7.0"

[dev-dependencies]
criterion = "0.5.1"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
incremental = false
rustflags = ["-C", "target-cpu=native", "-Z", "tune-cpu=native"]

[[bench]]
name = "matrix_benchmark"
harness = false